--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="save">Save</string>
     <string name="delete">Delete</string>
+    <string name="create">Create</string>
 </resources>
