--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="delete">Delete</string>
     <string name="create">Create</string>
     <string name="error_task_is_empty">Task not be empty</string>
+    <string name="error_offline">You are offline</string>
 </resources>
