--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="create">Create</string>
     <string name="error_task_is_empty">Task not be empty</string>
     <string name="error_offline">You are offline</string>
+    <string name="spend_time">Spend time</string>
+    <string name="Description">Description</string>
+    <string name="Date">Date</string>
 </resources>
