--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="Date">Date</string>
     <string name="search_by_date">Search by date</string>
     <string name="from">From</string>
+
+    <string name="select_tags">Select tags</string>
 </resources>
