set login screen witg mvp add progress bar to login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="from">From</string>
 
     <string name="select_tags">Select tags</string>
+    <string name="login_error_title">Login error</string>
 </resources>
