--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
 
     <string name="select_tags">Select tags</string>
     <string name="login_error_title">Login error</string>
+    <string name="edit_do_you_delete">Do you want delete entry?</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">ok</string>
 </resources>
