improvement search screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="cancel">Cancel</string>
     <string name="ok">ok</string>
     <string name="logout">Logout</string>
+    <string name="search">Search</string>
+    <string name="to">To</string>
 </resources>
