improvement offline mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="logout">Logout</string>
     <string name="search">Search</string>
     <string name="to">To</string>
+    <string name="description_or_title">Text</string>
+    <string name="dismiss">Dismiss</string>
 </resources>
